Fix skip link to be completely hidden off-screen

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -238,7 +238,7 @@ footer {
 /* Accessibility */
 .skip-link {
     position: absolute;
-    top: -40px;
+    top: -100px;
     left: 0;
     background: #000;
     color: #fff;
